modified:   build.gradle.kts 	modified:   gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@
 org.gradle.jvmargs=-Xmx4g
 org.gradle.daemon=true
 org.gradle.parallel=true
-org.gradle.configuration-cache=false
+# org.gradle.configuration-cache=false
 # -------Plugins---------
 foojayResolverConvention=0.8.0
 johnrengelmanShadow=8.1.1
