new module:   hw14-spring

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ org.gradle.parallel=true
 foojayResolverConvention=0.8.0
 johnrengelmanShadow=8.1.1
 dependencyManagement=1.1.7
-springframeworkBoot=3.4.1
+springframeworkBoot=3.4.2
 protobufVer=0.9.4
 spotless=7.0.0
 jgitver=0.10.0-rc03
@@ -24,3 +24,7 @@ jmh=1.37
 jetty=12.0.16
 reflections=0.10.2
 
+freemarker=2.3.34
+bootstrap=5.3.3
+springDocOpenapiUi=2.8.5
+jsr305=3.0.2
